integration work; changed some links and added main page sections

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -21,10 +21,10 @@
   <div id="wrapper" style="padding-left:15%; padding-right:15%; height:100%;">
 
     <div class="content_types">
-      <a class="active" href="#">MAPS</a>
-      <a href="#">CONFIGS</a>
-      <a href="#">MODELS</a>
-      <a href="#">OTHER</a>
+      <a $ href="/maps">MAPS</a>
+      <a $ href="/configs">CONFIGS</a>
+      <a $ href="/models">MODELS</a>
+      <a $ href="/other">OTHER</a>
     </div>
 
     <div class="content">
@@ -38,7 +38,7 @@
               <img src="/resources/img/bsp_png.png" type="image/png"></img>
             </a></td>
             <td>
-              <h1><a href="map.html">map1</a> <em> by <a href="user.html">User 1</a></em></h1>
+              <h1><a href="/content/1">map1</a> <em> by <a href="user.html">User 1</a></em></h1>
               <p><strong>
                 <i class="fa fa-download" style="color:blue"></i> 1 &#160;&#160;
                 <i class="fa fa-heart" style="color:red"></i> 10 &#160;&#160;
