--- a/site/public/login.html
+++ b/site/public/login.html
@@ -36,7 +36,7 @@
 
         <input id="but_login" type="submit" value="Login"></input>
       </form>
-      <p id="create_acc">Or, <a href="create_account.html">Create an Account</a></p>
+      <p id="create_acc">Or, <a href="/create_account">Create an Account</a></p>
     </div>
   </div>
 
