--- a/site/public/navbar.html
+++ b/site/public/navbar.html
@@ -1,10 +1,10 @@
 <a href="/">{ Logo }</a>
 <a href="/">Explore</a>
-<a href="map.html">Random</a>
+<a href="/content/1">Random</a>
 <div class="searchbar">
   <input type="text" placeholder="Search..." name="search"></input>
   <button type="submit"><i class="fa fa-search"></i></button>
 </div>
-<a href="login.html" style="float:right">Login or Create Account</a>
-<a href="user.html" style="float:right">Profile</a>
-<a href="upload.html" style="float:right">Upload</a>
+<a href="/login" style="float:right">Login or Create Account</a>
+<a href="/home" style="float:right">Profile</a>
+<a href="/upload" style="float:right">Upload</a>
