--- a/site/public/map.html
+++ b/site/public/map.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" type="text/css" href="/resources/css/page_content.css"/>
 
   <script src="/resources/scripts/insert_navbar.js" defer="defer"></script>
-  <script src="/resources/scripts/file_downloaded.js" defer="defer"></script>
 </head>
 
 <body>
@@ -21,7 +20,7 @@
   <div id="wrapper" style="padding-left:5%; padding-right:5%; height:100%;">
     <div class="content">
       <h1>$</h1>
-      <h2>by <a href="user.html">$</a></h2>
+      <h2>by <a href="/user/1">$</a></h2>
 
       <div class="container">
         <a href="#"><i class="fa fa-arrow-left"></i>&#160;</a>
@@ -67,7 +66,7 @@
       </form>
 
       <br/><br/>
-      <p style="text-align: center"><a href="#"><i class="fa fa-arrow-up"></i></a></p>
+      <p style="text-align: center"><a href=""><i class="fa fa-arrow-up"></i></a></p>
     </div>
 
   </div>
