user page is dynamic pt 1; TODO cookies?

--- a/site/public/user.html
+++ b/site/public/user.html
@@ -20,7 +20,7 @@
 
   <div id="wrapper" style="padding-left:5%; padding-right:5%; height:100%;">
     <div class="content">
-      <h1>username</h1>
+      <h1>$</h1>
 
       <div class="container">
         <div class="submissions">
@@ -63,16 +63,16 @@
         <div class="user_details">
           <!-- <h1>PROFILE</h1> -->
           <strong>User since:</strong>
-          <p>01/04/2020</p>
+          <p>$</p>
           <strong>Downloads received:</strong>
-          <p><i class="fa fa-download" style="color:blue"></i> 20</p>
+          <p><i class="fa fa-download" style="color:blue"></i> $</p>
           <strong>Favourites received:</strong>
-          <p><i class="fa fa-heart" style="color:red"></i> 10</p>
+          <p><i class="fa fa-heart" style="color:red"></i> $</p>
           <strong>Number of submissions:</strong>
-          <p><i class="fa fa-upload" style="color:grey"></i> 5</p>
+          <p><i class="fa fa-upload" style="color:grey"></i> $</p>
           <strong>About:</strong>
           <a href="#">Edit Section</a>
-          <p>Test profile blog here</p>
+          <p>$</p>
         </div>
       </div>
 
