--- a/site/HTML_templates/user_submission.html
+++ b/site/HTML_templates/user_submission.html
@@ -3,7 +3,7 @@
     <object data="/resources/img/$" type="image/svg+xml"></object>
   </td>
   <td>
-    <h2><a href="$">$</a></h2>
+    <h2><a href="$">$</a></h2><br/>
     <p id="upload_tag"> Uploaded $</p>
     <p><strong>
       <i class="fa fa-download" style="color:blue"></i> $ &#160;&#160;
