dynamic main pages; todo store user data in session

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -29,54 +29,11 @@
 
     <div class="content">
 
-      <p>Description about .bsp files and filter/order options.</p>
+      <p>$</p>
 
-      <table>
-        <tbody>
-          <tr>
-            <td style="width:200px"><a href="map.html">
-              <img src="/resources/img/bsp_png.png" type="image/png"></img>
-            </a></td>
-            <td>
-              <h1><a href="/content/1">map1</a> <em> by <a href="user.html">User 1</a></em></h1>
-              <p><strong>
-                <i class="fa fa-download" style="color:blue"></i> 1 &#160;&#160;
-                <i class="fa fa-heart" style="color:red"></i> 10 &#160;&#160;
-                <i class="fa fa-upload" style="color:grey"></i> 01/04/2020
-              </strong></p>
-              <p>Description 1</p>
-            </td>
-          </tr>
-          <tr>
-            <td style="width:200px"><a href="map.html">
-              <img src="/resources/img/bsp_png.png" type="image/png"></img>
-            </a></td>
-            <td>
-              <h1><a href="map.html">map2</a> <em> by <a href="user.html">User 2</a></em></h1>
-              <p><strong>
-                <i class="fa fa-download" style="color:blue"></i> 2 &#160;&#160;
-                <i class="fa fa-heart" style="color:red"></i> 20 &#160;&#160;
-                <i class="fa fa-upload" style="color:grey"></i> 02/04/2020
-              </strong></p>
-              <p>Description 2</p>
-            </td>
-          </tr>
-          <tr>
-            <td style="width:200px"><a href="map.html">
-              <img src="/resources/img/bsp_png.png" type="image/png"></img>
-            </a></td>
-            <td>
-              <h1><a href="map.html">map3</a> <em> by <a href="user.html">User 3</a></em></h1>
-              <p><strong>
-                <i class="fa fa-download" style="color:blue"></i> 3 &#160;&#160;
-                <i class="fa fa-heart" style="color:red"></i> 30 &#160;&#160;
-                <i class="fa fa-upload" style="color:grey"></i> 03/04/2020
-              </strong></p>
-              <p>Description 3</p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <table><tbody>
+          $
+      </tbody></table>
 
       <p><a href="admin.html">Admin</a></p>
       <br/><br/>
