added random page loading

--- a/site/public/navbar.html
+++ b/site/public/navbar.html
@@ -1,6 +1,6 @@
 <a href="/">{ Logo }</a>
 <a href="/">Explore</a>
-<a href="/content/1">Random</a>
+<a href="/random">Random</a>
 <div class="searchbar">
   <input type="text" placeholder="Search..." name="search"></input>
   <button type="submit"><i class="fa fa-search"></i></button>
