added dynamic navbar!

--- a/site/HTML_templates/navbar.html
+++ b/site/HTML_templates/navbar.html
@@ -5,6 +5,9 @@
   <input type="text" placeholder="Search..." name="search"></input>
   <button type="submit"><i class="fa fa-search"></i></button>
 </div>
+<!--
 <a href="/login" style="float:right">Login or Create Account</a>
-<a href="/home" style="float:right">Profile</a>
+<a href="/logout id='logout'" style="float:right">Logout</a>
+<a href="/home" style="float:right">My Profile</a>
 <a href="/upload" style="float:right">Upload</a>
+-->
