--- a/site/public/map.html
+++ b/site/public/map.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="/resources/css/page_content.css"/>
 
   <script src="/resources/scripts/insert_navbar.js" defer="defer"></script>
+  <script src="/resources/scripts/handle_favourites.js" defer="defer"></script>
 </head>
 
 <body>
@@ -20,6 +21,7 @@
   <div id="wrapper" style="padding-left:5%; padding-right:5%; height:100%;">
     <div class="content">
       <h1>$</h1>
+      <div id="content_id" style='display:none'>$</div>
       <h2>by <a href="/user/1">$</a></h2>
 
       <div class="container">
@@ -34,7 +36,7 @@
 
       <p><strong>
         <i class="fa fa-download" style="color:blue"></i> $ &#160;&#160;
-        <i class="fa fa-heart" style="color:red"></i> $ &#160;&#160;
+        <i class="fa fa-heart" id="hearted" style="color:grey"></i> $ &#160;&#160;
         <a href='/download/$'> Download </a>
       </strong></p>
 
