added dynamic updating of favourites

--- a/site/public/map.html
+++ b/site/public/map.html
@@ -35,9 +35,12 @@
       <div class="border"></div>
 
       <p><strong>
-        <i class="fa fa-download" style="color:blue"></i> $ &#160;&#160;
-        <i class="fa fa-heart" id="hearted" style="color:grey"></i> $ &#160;&#160;
-        <a href='/download/$'> Download </a>
+        <i class="fa fa-download" style="color:blue"></i>
+          <div id="d_saved" style="display:inline"> $ </div> &#160;&#160;
+        <i class="fa fa-heart" id="hearted" style="color:grey"></i>
+          <div id="d_faved" style="display:inline"> $ </div> &#160;&#160;
+        <a href='/download/$'> Download </a> &#160;&#160;
+        <a href='/favourite' id="heart_link"></a>
       </strong></p>
 
       <div class="border"></div>
