--- a/site/HTML_templates/user_page.html
+++ b/site/HTML_templates/user_page.html
@@ -22,8 +22,14 @@
       <strong>Number of submissions:</strong>
       <p><i class="fa fa-upload" style="color:grey"></i> $</p>
       <strong>About:</strong>
-      <a href="#">Edit Section</a>
+      <a href="" id="toggle_desc" style="display:none">Edit Section</a>
       <p>$</p>
+      <div id="edit_desc" style="display:none">
+        <form id="desc_form">
+          <textarea rows="4" cols="50" id="newdesc" placeholder="Write a new profile description here..."/>
+          <input id="submit_desc" type="submit"></input>
+        </form>
+      </div>
     </div>
   </div>
 
