added profile description editing

--- a/site/HTML_templates/user_page.html
+++ b/site/HTML_templates/user_page.html
@@ -23,10 +23,10 @@
       <p><i class="fa fa-upload" style="color:grey"></i> $</p>
       <strong>About:</strong>
       <a href="" id="toggle_desc" style="display:none">Edit Section</a>
-      <p>$</p>
+      <p id="cur_desc">$</p>
       <div id="edit_desc" style="display:none">
         <form id="desc_form">
-          <textarea rows="4" cols="50" id="newdesc" placeholder="Write a new profile description here..."/>
+          <textarea rows="4" cols="50" id="newdesc" resize="none" placeholder="Write a new profile description here..."/>
           <input id="submit_desc" type="submit"></input>
         </form>
       </div>
