--- a/site/public/upload.html
+++ b/site/public/upload.html
@@ -53,7 +53,7 @@
             <label id="upload_comment">&#160;<i class="fa fa-info-circle"></i>&#160;Map uploads should be a .bsp file</label>
 
             <label id="lab_desc_map">Description:&#160;</label>
-            <textarea rows="4" cols="50" id="s_desc_map" placeholder="Write a description here..."/><br/>
+            <textarea rows="4" cols="50" resize="none" id="s_desc_map" placeholder="Write a description here..."/><br/>
 
             <label id="lab_scsh_map">Screenshots:&#160;</label>
             <input type="file" id="s_scsh_map" size="8" multiple="multiple"></input><br/>
@@ -72,7 +72,7 @@
             <label id="upload_comment">&#160;<i class="fa fa-info-circle"></i>&#160;Config uploads should be a .cfg file</label>
 
             <label id="lab_desc_config">Description:&#160;</label>
-            <textarea rows="4" cols="50" id="s_desc_config" placeholder="Write a description here..."/><br/>
+            <textarea rows="4" cols="50" resize="none" id="s_desc_config" placeholder="Write a description here..."/><br/>
 
             <br/>
           </div>
@@ -87,7 +87,7 @@
             <label id="upload_comment">&#160;<i class="fa fa-info-circle"></i>&#160;Model uploads should be a .zip file</label>
 
             <label id="lab_desc_model">Description:&#160;</label>
-            <textarea rows="4" cols="50" id="s_desc_model" placeholder="Write a description here..."/><br/>
+            <textarea rows="4" cols="50" resize="none" id="s_desc_model" placeholder="Write a description here..."/><br/>
 
             <label id="lab_scsh_model">Screenshots:&#160;</label>
             <input type="file" id="s_scsh_model" size="8" multiple="multiple"></input><br/>
@@ -109,7 +109,7 @@
             <label id="upload_comment">&#160;<i class="fa fa-info-circle"></i>&#160;Multiple files should be zipped then uploaded.</label>
 
             <label id="lab_desc_other">Description:&#160;</label>
-            <textarea rows="4" cols="50" id="s_desc_other" placeholder="Write a description here..."/><br/>
+            <textarea rows="4" cols="50" resize="none" id="s_desc_other" placeholder="Write a description here..."/><br/>
 
             <br/>
           </div>
