--- a/site/public/map.html
+++ b/site/public/map.html
@@ -23,14 +23,13 @@
     <div class="content">
       <h1>$</h1>
       <div id="content_id" style='display:none'>$</div>
-      <h2>by <a href="/user/1">$</a></h2>
+      <h2>by <a href="/user/$">$</a></h2>
 
       <div class="container">
         <a id="leftslide" href=''><i class="fa fa-arrow-left"></i>&#160;</a>
         <div class="container" style= "width:80%; height:500px;">
-          <img src="/resources/img/bsp_png.png" class="slide" type="image" height="500px"></img>
-          <img src="/resources/img/mod_png.png" class="slide" type="image" height="500px"></img>
-          <img src="/resources/img/oth_png.png" class="slide" type="image" height="500px"></img>
+          <!-- <img src="/resources/img/bsp_png.png" class="slide" type="image" height="500px"></img> -->
+          $
         </div>
         <a id="rightslide" href=''>&#160;<i class="fa fa-arrow-right"></i></a>
       </div>
