--- a/site/public/content.html
+++ b/site/public/content.html
@@ -22,10 +22,11 @@
   <div id="wrapper" style="padding-left:5%; padding-right:5%; height:100%;">
     <div class="content">
       <h1>$</h1>
+      <h2>$</h2>
       <div id="content_id" style='display:none'>$</div>
       <h2>by <a href="/user/$">$</a></h2>
 
-      <div class="container">
+      <div class="container" id="slideshow">
         <a id="leftslide" href=''><i class="fa fa-arrow-left"></i>&#160;</a>
         <div class="container" style= "width:80%; height:500px;">
           <!-- <img src="/resources/img/bsp_png.png" class="slide" type="image" height="500px"></img> -->
