fixed a bug with updating user submissions

--- a/site/HTML_templates/main_content.html
+++ b/site/HTML_templates/main_content.html
@@ -1,6 +1,6 @@
 <tr>
   <td style="width:200px"><a href="$">
-    <img src="$" type="image"></img>
+    <img src="$" type="image" width="200" height="200" style="object-fit: cover;"></img>
   </a></td>
   <td>
     <h1><a href="$">$</a> <em> by <a href="$">$</a></em></h1>
