uploading screenshots for each content

--- a/site/public/upload.html
+++ b/site/public/upload.html
@@ -39,9 +39,7 @@
 
           <!--
            TODO: add options for thumbnails and tags
-           show small screenshots when uploading
-
-           if not logged in, replace upload_form div contents with message and link to login page.
+                 show small screenshots when uploading
          -->
 
           <div id="t_map">
@@ -57,7 +55,7 @@
 
             <label id="lab_scsh_map">Screenshots:&#160;</label>
             <input type="file" id="s_scsh_map" size="8" multiple="multiple"></input><br/>
-            <label id="upload_comment">&#160;<i class="fa fa-info-circle"></i>&#160;Each screenshot should be a .png or .jpg file</label>
+            <label id="upload_comment">&#160;<i class="fa fa-info-circle"></i>&#160;Each screenshot should be a .png, .gif, .jpeg or .jpg file</label>
 
             <br/>
           </div>
@@ -73,6 +71,10 @@
 
             <label id="lab_desc_config">Description:&#160;</label>
             <textarea rows="4" cols="50" resize="none" id="s_desc_config" placeholder="Write a description here..."/><br/>
+
+            <label id="lab_scsh_config">Screenshots:&#160;</label>
+            <input type="file" id="s_scsh_config" size="8" multiple="multiple"></input><br/>
+            <label id="upload_comment">&#160;<i class="fa fa-info-circle"></i>&#160;Each screenshot should be a .png, .gif, .jpeg or .jpg file</label>
 
             <br/>
           </div>
@@ -91,7 +93,7 @@
 
             <label id="lab_scsh_model">Screenshots:&#160;</label>
             <input type="file" id="s_scsh_model" size="8" multiple="multiple"></input><br/>
-            <label id="upload_comment">&#160;<i class="fa fa-info-circle"></i>&#160;Each screenshot should be a .png or .jpg file</label>
+            <label id="upload_comment">&#160;<i class="fa fa-info-circle"></i>&#160;Each screenshot should be a .png, .gif, .jpeg or .jpg file</label>
 
             <br/>
           </div>
@@ -110,6 +112,10 @@
 
             <label id="lab_desc_other">Description:&#160;</label>
             <textarea rows="4" cols="50" resize="none" id="s_desc_other" placeholder="Write a description here..."/><br/>
+
+            <label id="lab_scsh_other">Screenshots:&#160;</label>
+            <input type="file" id="s_scsh_other" size="8" multiple="multiple"></input><br/>
+            <label id="upload_comment">&#160;<i class="fa fa-info-circle"></i>&#160;Each screenshot should be a .png, .gif, .jpeg or .jpg file</label>
 
             <br/>
           </div>
