added fail handling page and changed svg

--- a/site/HTML_templates/empty_category.html
+++ b/site/HTML_templates/empty_category.html
@@ -1,6 +1,6 @@
 <tr>
   <td>
-    <object data="/resources/img/empty.svg" height="200" width="200" type="image/svg+xml"></object>
+    <object data="/resources/img/emptybox.svg" height="200" width="200" type="image/svg+xml"></object>
   </td>
   <td>
     <h2>Nothing has been uploaded in this category!</h2>
