added a site logo to the navbar

--- a/site/HTML_templates/navbar.html
+++ b/site/HTML_templates/navbar.html
@@ -1,4 +1,8 @@
-<a href="/">{ Logo }</a>
+<a href="/" style="display: block;">
+  <object data="/resources/img/logo.svg" height="60" width="60"
+    style="pointer-events: none;" type="image/svg+xml">
+  </object>
+</a>
 <a href="/">Explore</a>
 <a href="/random">Random</a>
 <div class="searchbar">
