added admin controls and changed logo

--- a/site/public/admin.html
+++ b/site/public/admin.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB" xml:lang="en-GB">
-<head><title>Blank2</title></head>
-<body>
 
-<h1>Blank2</h1>
+<head>
+  <meta charset="UTF-8"/>
+  <title>Home</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+
+  <link rel="stylesheet" type="text/css" href="/resources/css/global_style.css"/>
+  <link rel="stylesheet" type="text/css" href="/resources/css/navbar.css"/>
+  <link rel="stylesheet" type="text/css" href="/resources/css/user_content.css"/>
+
+  <script src="/resources/scripts/insert_navbar.js" defer="defer"></script>
+  <script src="/resources/scripts/handle_admin.js" defer="defer"></script>
+</head>
+
+<body>
+  <div id="navbar-div"></div>
+
+  <div id="wrapper" style="padding-left:5%; padding-right:5%; height:100%;">
+    <div class="content" id="adminpage">
+    </div>
+  </div>
 
 </body>
 </html>
