--- a/site/HTML_templates/navbar.html
+++ b/site/HTML_templates/navbar.html
@@ -1,5 +1,5 @@
-<a href="/" style="display: block;">
-  <object data="/resources/img/logo.svg" height="60" width="60"
+<a href="/" style="display: block; padding: 10px 10px;">
+  <object data="/resources/img/logo2.svg" height="30" width="60"
     style="pointer-events: none;" type="image/svg+xml">
   </object>
 </a>
