formatting dynamic admin table; TODO handling

--- a/site/HTML_templates/admin_form.html
+++ b/site/HTML_templates/admin_form.html
@@ -5,15 +5,11 @@
     <th>Join date</th>
     <th>Moderator?</th>
     <th>Delete?</th>
-
-    <tr>
-      <td>user_id</td>
-      <td>Username</td>
-      <td>Join date</td>
-      <td>Moderator?</td>
-      <td>Delete?</td>
-    </tr>
+    <!-- User data inserted here -->
+    $
   </table>
+
+  <br/><br/>
 
   <table id="uploads">
     <th>uploads_id</th>
@@ -21,15 +17,11 @@
     <th>Upload date</th>
     <th>Download</th>
     <th>Delete?</th>
-
-    <tr>
-      <td>uploads_id</td>
-      <td>Upload name</td>
-      <td>Upload date</td>
-      <td>Download</td>
-      <td>Delete?</td>
-    </tr>
+    <!-- Upload data inserted here -->
+    $
   </table>
 
-  <input id="but_admin" type="submit" value="Create Account"></input>
+  <br/><br/>
+
+  <input id="but_admin" type="submit" value="Update"></input>
 </form>
