--- a/site/public/admin.html
+++ b/site/public/admin.html
@@ -9,10 +9,29 @@
 
   <link rel="stylesheet" type="text/css" href="/resources/css/global_style.css"/>
   <link rel="stylesheet" type="text/css" href="/resources/css/navbar.css"/>
-  <link rel="stylesheet" type="text/css" href="/resources/css/user_content.css"/>
 
   <script src="/resources/scripts/insert_navbar.js" defer="defer"></script>
   <script src="/resources/scripts/handle_admin.js" defer="defer"></script>
+
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      border: 1px solid #ddd;
+    }
+
+    th {
+      background-color: #eee;
+    }
+
+    th, td {
+      border: 1px solid #777;
+      width: 20%;
+      text-align: left;
+      padding: 5px;
+    }
+  </style>
+
 </head>
 
 <body>
