--- a/site/public/admin.html
+++ b/site/public/admin.html
@@ -19,11 +19,7 @@
       width: 100%;
       border: 1px solid #ddd;
     }
-
-    th {
-      background-color: #eee;
-    }
-
+    th { background-color: #eee; }
     th, td {
       border: 1px solid #777;
       width: 20%;
