added parsing the admin table changes

--- a/site/HTML_templates/admin_form.html
+++ b/site/HTML_templates/admin_form.html
@@ -25,6 +25,7 @@
   </table>
 
   <div id="uploadsbreak"><br/><br/></div>
-
+  <div id="maxuserid" style="display:none">$</div>
+  <div id="maxuploadid" style="display:none">$</div>
   <input id="but_admin" type="submit" value="Update"></input>
 </form>
