--- a/site/public/content.html
+++ b/site/public/content.html
@@ -56,15 +56,8 @@
 
       <h3>Comments ($)</h3>
 
-      $
-      <!-- TODO: INTEGRATE COMMENT FORMAT
-      <p id="username"><a href="user.html">User 1</a> (1 day ago)</p>
-      <p id="comment">Comment 1</p>
-      <p id="username"><a href="user.html">User 2</a> (2 days ago)</p>
-      <p id="comment">Comment 2</p>
-      <p id="username"><a href="user.html">User 3</a> (3 days ago)</p>
-      <p id="comment">Comment 3</p>
-      -->
+      <div id="comments">$</div>
+
       <div class="border"></div>
       <br/>
 
