added slide transition animation

--- a/site/public/content.html
+++ b/site/public/content.html
@@ -30,7 +30,7 @@
       <div class="container" id="slideshow">
         <a id="leftslide" href=''><i class="fa fa-arrow-left"></i>&#160;</a>
         <div class="container" style= "width:80%; height:500px;">
-          <!-- <img src="/resources/img/bsp_png.png" class="slide" type="image" height="500px"></img> -->
+          <!-- <img src="/resources/img/bsp_png.png" class="slide fade" type="image" height="500px"></img> -->
           $
         </div>
         <a id="rightslide" href=''>&#160;<i class="fa fa-arrow-right"></i></a>
