fixed back to top links

--- a/site/HTML_templates/admin_form.html
+++ b/site/HTML_templates/admin_form.html
@@ -29,3 +29,5 @@
   <div id="maxuploadid" style="display:none">$</div>
   <input id="but_admin" type="submit" value="Update"></input>
 </form>
+
+<p style="text-align: center"><a href=""><i class="fa fa-arrow-up"></i></a></p>
