--- a/site/HTML_templates/user_page.html
+++ b/site/HTML_templates/user_page.html
@@ -8,7 +8,7 @@
           $
         </tbody></table>
     </div>
-    
+
     <div class="user_details">
       <!-- <h1>PROFILE</h1> -->
       <strong>User since:</strong>
@@ -32,4 +32,4 @@
   </div>
 
   <br/><br/>
-  <p style="text-align: center"><a href="#"><i class="fa fa-arrow-up"></i></a></p>
+  <p style="text-align: center"><a href=""><i class="fa fa-arrow-up"></i></a></p>
