--- a/site/public/index.html
+++ b/site/public/index.html
@@ -36,7 +36,7 @@
       </tbody></table>
 
       <br/><br/>
-      <p style="text-align: center"><a href="#"><i class="fa fa-arrow-up"></i></a></p>
+      <p style="text-align: center"><a href=""><i class="fa fa-arrow-up"></i></a></p>
     </div>
   </div>
 
