final bugfixes and tweaks

--- a/site/HTML_templates/navbar.html
+++ b/site/HTML_templates/navbar.html
@@ -3,6 +3,7 @@
     style="pointer-events: none;" type="image/svg+xml">
   </object>
 </a>
+<a href="/">Explore</a>
 <a href="/random">Random</a>
 <!--
 <a href="/">Explore</a>
