added logo page

--- a/site/HTML_templates/navbar.html
+++ b/site/HTML_templates/navbar.html
@@ -5,6 +5,7 @@
 </a>
 <a href="/">Explore</a>
 <a href="/random">Random</a>
+<a href="/logo">Logo</a>
 <!--
 <a href="/">Explore</a>
 <div class="searchbar">
